add oauth client id

--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
   </div>
 
   <script>
-    // TODO: Zaregistruj OAuth Client v Google Cloud Console, získej CLIENT_ID
-    const CLIENT_ID = 'YOUR_CLIENT_ID.apps.googleusercontent.com';
+    const CLIENT_ID = '562922982244-e4ci4pc7pj3tche4dat3ra6oam17ath8.apps.googleusercontent.com';
     const API_KEY = ''; // není potřeba pro Drive AppData
     const DISCOVERY_DOCS = ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest'];
     const SCOPES = 'https://www.googleapis.com/auth/drive.appdata';
