--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Moje váha</title>
-  <!-- Content Security Policy for Google APIs -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://apis.google.com https://accounts.google.com https://www.gstatic.com 'unsafe-inline'; style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; frame-src https://accounts.google.com; connect-src https://www.googleapis.com https://www.gstatic.com;">
-  <!-- Tailwind CSS via CDN (production build) -->
+  <!-- Content Security Policy -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://accounts.google.com https://apis.google.com https://www.gstatic.com 'unsafe-inline'; style-src 'self' https://cdn.jsdelivr.net 'unsafe-inline'; frame-src https://accounts.google.com; connect-src https://www.googleapis.com https://www.gstatic.com;">
+  <!-- Tailwind CSS -->
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center">
@@ -40,15 +40,18 @@
     </div>
   </div>
 
-  <!-- Google API Client Library -->
+  <!-- Google Identity Services -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
+  <!-- GAPI client for Drive -->
   <script src="https://apis.google.com/js/api.js" async defer></script>
   <script>
-    /* Google OAuth2 a Drive AppData SPA */
     const CLIENT_ID = '562922982244-e4ci4pc7pj3tche4dat3ra6oam17ath8.apps.googleusercontent.com';
-    const DISCOVERY_DOCS = ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest'];
-    const SCOPES = 'https://www.googleapis.com/auth/drive.appdata';
+    const SCOPE = 'https://www.googleapis.com/auth/drive.appdata';
+    const FILE_NAME = 'weight_records.json';
 
-    let GoogleAuth;
+    let tokenClient;
+    let accessToken = null;
+
     const loginBtn = document.getElementById('login-btn');
     const logoutBtn = document.getElementById('logout-btn');
     const authSection = document.getElementById('auth-section');
@@ -58,99 +61,102 @@
     const dateInput = document.getElementById('date');
     const weightInput = document.getElementById('weight');
 
-    // Přednastavit dnešní datum
     dateInput.valueAsDate = new Date();
 
-    function handleClientLoad() {
-      gapi.load('client:auth2', initClient);
+    function gapiLoad() {
+      gapi.load('client', initializeGapiClient);
     }
 
-    function initClient() {
-      gapi.client.init({
-        discoveryDocs: DISCOVERY_DOCS,
-        clientId: CLIENT_ID,
-        scope: SCOPES
-      }).then(() => {
-        GoogleAuth = gapi.auth2.getAuthInstance();
-        GoogleAuth.isSignedIn.listen(updateSigninStatus);
-        updateSigninStatus(GoogleAuth.isSignedIn.get());
-
-        loginBtn.addEventListener('click', () => GoogleAuth.signIn());
-        logoutBtn.addEventListener('click', () => GoogleAuth.signOut());
-
-        weightForm.addEventListener('submit', e => {
-          e.preventDefault();
-          saveRecord({ date: dateInput.value, weight: parseFloat(weightInput.value) });
-          weightInput.value = '';
-        });
-      }).catch(err => console.error('GAPI init error', err));
+    async function initializeGapiClient() {
+      await gapi.client.init({apiKey: '', discoveryDocs: ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest']});
     }
 
-    function updateSigninStatus(isSignedIn) {
-      if (isSignedIn) {
-        authSection.classList.add('hidden');
-        appSection.classList.remove('hidden');
-        listRecords();
-      } else {
-        authSection.classList.remove('hidden');
-        appSection.classList.add('hidden');
-        historyList.innerHTML = '';
+    function gisInit() {
+      tokenClient = google.accounts.oauth2.initTokenClient({
+        client_id: CLIENT_ID,
+        scope: SCOPE,
+        callback: (tokenResponse) => {
+          if (tokenResponse.error) {
+            console.error('Token error', tokenResponse);
+            return;
+          }
+          accessToken = tokenResponse.access_token;
+          google.accounts.oauth2.disableAutoSelect();
+          onSignIn();
+        }
+      });
+    }
+
+    function onSignIn() {
+      authSection.classList.add('hidden');
+      appSection.classList.remove('hidden');
+      listRecords();
+    }
+
+    function signOut() {
+      if (accessToken) {
+        google.accounts.oauth2.revoke(accessToken);
+        accessToken = null;
       }
+      authSection.classList.remove('hidden');
+      appSection.classList.add('hidden');
+      historyList.innerHTML = '';
     }
 
-    const FILE_NAME = 'weight_records.json';
+    loginBtn.addEventListener('click', () => {
+      if (accessToken === null) {
+        tokenClient.requestAccessToken({prompt: 'consent'});
+      }
+    });
+    logoutBtn.addEventListener('click', signOut);
+
+    weightForm.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const entry = {date: dateInput.value, weight: parseFloat(weightInput.value)};
+      await saveRecord(entry);
+      weightInput.value = '';
+    });
 
     async function getAppDataFile() {
-      const res = await gapi.client.drive.files.list({
-        spaces: 'appDataFolder', fields: 'files(id,name)',
-        q: `name='${FILE_NAME}'`
-      });
+      const res = await gapi.client.drive.files.list({spaces: 'appDataFolder', fields: 'files(id,name)', q: `name='${FILE_NAME}'`});
       return res.result.files[0] || null;
     }
 
     async function saveRecord(entry) {
-      try {
-        let file = await getAppDataFile();
-        let records = [];
-        if (file) {
-          const download = await gapi.client.drive.files.get({ fileId: file.id, alt: 'media' });
-          records = JSON.parse(download.body || '[]');
-        }
-        records.push(entry);
-        const blob = new Blob([JSON.stringify(records)], { type: 'application/json' });
-        const metadata = { name: FILE_NAME, parents: ['appDataFolder'] };
-        const form = new FormData();
-        form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
-        form.append('file', blob);
-        const token = GoogleAuth.currentUser.get().getAuthResponse().access_token;
-        const url = file
-          ? `https://www.googleapis.com/upload/drive/v3/files/${file.id}?uploadType=multipart&fields=id`
-          : 'https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&fields=id';
-        await fetch(url, { method: file ? 'PATCH' : 'POST', headers: { Authorization: `Bearer ${token}` }, body: form });
-        listRecords();
-      } catch (err) {
-        console.error('Save error', err);
+      let file = await getAppDataFile();
+      let records = [];
+      if (file) {
+        const download = await gapi.client.drive.files.get({fileId: file.id, alt: 'media'});
+        records = JSON.parse(download.body || '[]');
       }
+      records.push(entry);
+      const blob = new Blob([JSON.stringify(records)], {type: 'application/json'});
+      const metadata = {name: FILE_NAME, parents: ['appDataFolder']};
+      const form = new FormData();
+      form.append('metadata', new Blob([JSON.stringify(metadata)], {type: 'application/json'}));
+      form.append('file', blob);
+      const url = file ? `https://www.googleapis.com/upload/drive/v3/files/${file.id}?uploadType=multipart&fields=id` : 'https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&fields=id';
+      await fetch(url, {method: file ? 'PATCH' : 'POST', headers: {Authorization: `Bearer ${accessToken}`}, body: form});
+      listRecords();
     }
 
     async function listRecords() {
       historyList.innerHTML = '';
       const file = await getAppDataFile();
       if (file) {
-        const download = await gapi.client.drive.files.get({ fileId: file.id, alt: 'media' });
+        const download = await gapi.client.drive.files.get({fileId: file.id, alt: 'media'});
         const records = JSON.parse(download.body || '[]');
         records.sort((a, b) => new Date(b.date) - new Date(a.date));
-        records.forEach(e => {
+        for (const e of records) {
           const li = document.createElement('li');
           li.className = 'p-2 bg-gray-50 rounded flex justify-between';
           li.textContent = `${e.date}: ${e.weight} kg`;
           historyList.appendChild(li);
-        });
+        }
       }
     }
 
-    // Spustit načtení GAPI
-    window.onload = handleClientLoad;
+    window.onload = () => { gapiLoad(); gisInit(); };
   </script>
 </body>
 </html>
