--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Moje váha</title>
   <!-- Content Security Policy -->
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdn.jsdelivr.net https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4 https://accounts.google.com https://apis.google.com https://www.gstatic.com https://content.googleapis.com 'unsafe-inline'; style-src 'self' 'unsafe-inline'; frame-src https://accounts.google.com https://content.googleapis.com; connect-src https://www.googleapis.com https://www.gstatic.com https://content.googleapis.com;">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self';
+    script-src 'self' https://cdn.jsdelivr.net https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4 https://accounts.google.com https://apis.google.com https://www.gstatic.com https://content.googleapis.com 'unsafe-inline';
+    style-src 'self' 'unsafe-inline';
+    frame-src https://accounts.google.com https://content.googleapis.com https://accounts.google.com/gsi https://content.googleapis.com; 
+    connect-src https://www.googleapis.com https://www.gstatic.com https://content.googleapis.com;">
   <!-- Tailwind CSS via Browser CDN -->
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4" defer></script>
 </head>
@@ -69,7 +73,10 @@
     }
 
     async function initializeGapiClient() {
-      await gapi.client.init({apiKey: '', discoveryDocs: ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest']});
+      await gapi.client.init({
+        apiKey: '',
+        discoveryDocs: ['https://www.googleapis.com/discovery/v1/apis/drive/v3/rest']
+      });
     }
 
     function gisInit() {
@@ -117,7 +124,11 @@
     });
 
     async function getAppDataFile() {
-      const res = await gapi.client.drive.files.list({spaces: 'appDataFolder', fields: 'files(id,name)', q: `name='${FILE_NAME}'`});
+      const res = await gapi.client.drive.files.list({
+        spaces: 'appDataFolder',
+        fields: 'files(id,name)',
+        q: `name='${FILE_NAME}'`
+      });
       return res.result.files[0] || null;
     }
 
@@ -137,7 +148,11 @@
       const url = file
         ? `https://www.googleapis.com/upload/drive/v3/files/${file.id}?uploadType=multipart&fields=id`
         : 'https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&fields=id';
-      await fetch(url, {method: file ? 'PATCH' : 'POST', headers: {Authorization: `Bearer ${accessToken}`}, body: form});
+      await fetch(url, {
+        method: file ? 'PATCH' : 'POST',
+        headers: {Authorization: `Bearer ${accessToken}`},
+        body: form
+      });
       listRecords();
     }
 
